static/css/base.css
html{
    height: 100%;
}
body{
    background: url('/media/eshoppage.png') no-repeat center center fixed;
    background-size: cover;
    background-color: white;
    height: calc(100vh - 164px);
    font-family:'Lato', sans-serif;
}

/* from Bulma */
.icon {
    align-items: center;
    display: inline-flex;
    justify-content: center;
    height: 1.5rem;
    width: 1.5rem;
}
.custom-select-sm {
    height: calc(1.5em + .5rem + 2px);
    padding-top: .25rem;
    padding-bottom: .25rem;
    padding-left: .5rem;
    font-size: .875rem;
    margin-top: 30%;
}
.logo-font {
    text-transform: uppercase;
}

.main-logo-link {
    width: fit-content;
}

.shop-now-button {
    background: #37168A;
    color: white;
    width: 160px;
}

.btn-black {
    background: #37168A;
    color: white;
}

.btn-outline-black{
    background: white;
    color: #37168A !important;
    border: 1px solid #37168A;
}
/* shopping button css */
.btn-outline-black:hover,
.btn-outline-black:active,
.btn-outline-black:focus {
    background: #37168A;
    color: white !important;
}

.shop-now-button:hover,
.shop-now-button:active,
.shop-now-button:focus,
.btn-black:hover,
.btn-black:active,
.btn-black:focus {
    background: white;
    color: #37168A;
}
.border-black {
    border: 3px solid #37168A !important;
}

.bg-black{
    background: #37168A !important;
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

a.category-badge > span.badge:hover{
    background-color: #37168A !important;
    color: white !important;
}

.update-link,
.remove-item {
    cursor: pointer;
}

/* header color eshop logo  */

.logo-color{
    color: #37168A;
    font-size: 3.5rem;
}

/* nav bar colors with drop down  */
.navbar-light .navbar-nav .nav-link {
    color: #37168A;
}
/* logo and my account color and drop down menu   */
.user-logo, .account-color{
        color: #37168A;
} 

.dropdown-item {
    display: block;
    width: 100%;
    padding: .25rem 1.5rem;
    clear: both;
    font-weight: 400;
    color: #37168A;
    text-align: inherit;
    white-space: nowrap;
    background-color: transparent;
    border: 0;
}
.bag-color{
    color: #37168A;
}
/* all text colors */
.text-black {
    color: #37168A !important;
}
.mb-0, .my-0 {
    margin-bottom: 0!important;
    color: #37168A;
    font-weight: 500;
}
/* product page css  */

.border-color{
    border: 10px solid #37168A;
}

.edit-color{
    color: #37168A;
}

.wishlist-color{
    color: #003b00;
}
/* product details css  */

.product-description{
    color: #37168A;
}

.quantity-color{
    color: #37168A;
}

.quantity-border{
    border: 3px solid #37168A;
}

.fas-fa-chevron-left{
    color: #37168A;
}
.card-title{
    color: #37168A;
}

.card-text{
    color: #37168A;
}
/* edit products page css  */
.btn {
    border: 1px solid #37168A;
    color: #37168A !important;
    background-color:white;
}
.btn:hover{
    color: white !important;
    background-color: #37168A;
}
.keep-shopping{
    color: #37168A;
}
/* bag css */

.product-table{
    color: #37168A;
}

.btn-black {
    background: #37168A;
    color: white !important;
}

.sub-total{
    color: #37168A;
}

.delivery{
    color: #37168A;
}
/* ------------------------------- bootstrap toasts */

.message-container {
    position: fixed;
    top: 72px;
    right: 15px;
    z-index: 99999999999;
}
/* toast messages  */
.custom-toast {
    overflow: visible;
}

.toast-capper {
    height: 2px;
}

.bg-white{
    color: #37168A;
}

/* checkout and checkout successful page css  */
/* from CSS-tricks.com: https://css-tricks.com/snippets/css/css-triangle/ */
.arrow-up {
    width: 0; 
    height: 0; 
    border-left: 4px solid transparent;
    border-right: 4px solid transparent; 
    border-bottom: 10px solid #37168A;
    position: absolute;
    top: -10px;
    right: 36px;
}

/* Convenience classes - colors copied from Bootstrap */
.arrow-primary {
    border-bottom-color: #007bff !important;
}

.arrow-secondary {
    border-bottom-color: #6c757d !important;
}

.arrow-success {
    border-bottom-color: #28a745 !important;
}

.arrow-danger {
    border-bottom-color: #dc3545 !important;
}

.arrow-warning {
    border-bottom-color: #ffc107 !important;
}

.arrow-info {
    border-bottom-color: #17a2b8 !important;
}

.arrow-light {
    border-bottom-color: #f8f9fa !important;
}

.arrow-dark {
    border-bottom-color: #343a40 !important;
}

.bag-notification-wrapper {
    height: 100px;
    overflow-x: hidden;
    overflow-y: auto;
}

/* selection drop down filters  */
.border-info {
    border-color: #37168A !important;
}
.h1, h1 {
    font-size: 3.5rem;
    margin-top:40%;
    color: white;
    font-weight: 600;
    text-shadow: 4px 4px  #37168A;
}
p {
    margin-top: 40%;
    margin-bottom: 1rem;
    color: #37168A;
    background-color: white;
    margin: 1%;
}
/* -------------------------------- Media Queries */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
    .container {
      max-width: 80%;
    }
  }
  
  /* Allauth form formatting */
  
  .allauth-form-inner-content p {
      margin-top: 1.5rem; /* mt-4 */
      color: #6c757d; /* text-secondary */
  }
  
  .allauth-form-inner-content input {
      border-color: #000;
      border-radius: 0;
  }
  
  .allauth-form-inner-content label:not([for='id_remember']) {
      display: none;
  }
  
  .allauth-form-inner-content input::placeholder {
      color: #aab7c4;
  }
  
  .allauth-form-inner-content button,
  .allauth-form-inner-content input[type='submit'] {
      /* btn */
      display: inline-block;
      font-weight: 400;
      color: #fff;
      text-align: center;
      vertical-align: middle;
      -webkit-user-select: none;
      -moz-user-select: none;
      -ms-user-select: none;
      user-select: none;
      background-color: #000;
      border: 1px solid #000;
      padding: .375rem .75rem;
      font-size: 1rem;
      line-height: 1.5;
      border-radius: 0;
  
      /* standard bootstrap btn transitions */
      transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
  }
  
  .allauth-form-inner-content button:hover,
  .allauth-form-inner-content input[type='submit']:hover {	
      color: #fff;
      background-color: red;
      border-color: red;
  }
  
  .allauth-form-inner-content a {
      color: #37168A; /* text-info */
  }
  .allauth-form-inner-content button, .allauth-form-inner-content input {
    border: 1px solid #37168A;
    color: #37168A;
}
.allauth-form-inner-content button, .allauth-form-inner-content input:hover {
    background-color: #37168A;
    border: 1px solid #37168A;
    color: white;
}
.allauth-form-inner-content p {
    margin-top: 1.5rem;
    color: #37168A;
}
.allauth-form-inner-content a {
    color: #37168A;
}
  h2{
    color: white;
  }
  /* fixed top navbar only on medium and up */
  @media (min-width: 992px) {
      .fixed-top-desktop-only {
          position: fixed;
          top: 0;
          right: 0;
          left: 0;
          z-index: 1030;
      }
  
      .header-container {
          padding-top: 164px;
      }
  }
  
  /* pad the top a bit when navbar is collapsed on mobile */
  @media (max-width: 991px) {
      .header-container {
          padding-top: 116px;
      }
  
      body {
          height: calc(100vh - 116px);
      }
      .h4, h4 {
        font-size: 1rem;
    }
    .display-4 {
        font-size: 1.5rem;
        font-weight: 300;
        line-height: 1.2;
    }
    .display-4.logo-font.text-black {
        font-size: 0.5rem;
    }

    .h1, h1 {
        font-size: 2.0rem;
        margin-top: 100%;
    }
    .h2, h2 {
        font-size: 1rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
    }
    .input-group>.custom-file, .input-group>.custom-select, .input-group>.form-control, .input-group>.form-control-plaintext {
        position: relative;
        -ms-flex: 1 1 0%;
        min-width: 0;
        margin-bottom: 0;
    }
}
/* all muted text headers */
.text-muted {
    color: #37168A !important;
}

/* all  a links  */

a {
     color: #37168A;
    text-decoration: none;
    background-color: transparent;
}
.text-info {
    color: #37168A !important;
}

/* profile table  */

.table {
    width: 100%;
    margin-bottom: 1rem;
    color: #37168A;
}

/* form information text and labels  */
.form-control {
    color: #37168A
}
label {
    color: #37168A;
}

